# kvarena

./: .gitignore  Cargo.toml  README.md  arena_kv_cache_bindings.py  test_arena_cache.py  test_symbols.py
colab/: Cargo.toml  README.md  arena_kv_cache_bindings.py  benchmark.py  build.rs  cache_comparison_benchmark.py  complete_test.py  cuda.rs  cuda_ffi.rs  ffi.rs  lib.rs  llm_runner.py  logs.txt  slab.rs  test_arena_cache.py  zero_copy.rs
colab/src/: cuda.rs  ffi.rs  kv_layout.rs  lib.rs  llm_server_api.rs  slab.rs  zero_copy.rs
colab/src/cuda/: allocator.rs  bindings.rs  context.rs  device.rs  diagnostics.rs  error.rs  init.rs  memory.rs  mod.rs  raw.rs  stream.rs  tensor.rs
colab/src/ffi/: arena.rs  manager.rs  mod.rs  safety.rs  slab.rs  tensor.rs  tensor_ops.rs  types.rs  utils.rs
colab/tests/: integration_tests.rs
src/: ffi.rs  lib.rs
